docs/qa/v9/a11y.md
# Accessibility — http://localhost:4321

**0 serious/critical · 0 moderate · 0 minor across 51 runs** (0 run(s) not reached · 2026-08-21T10:51:55.087Z)

## Violations

No axe violations.

## Keyboard walk

- **/ @1440** — 2 stops (focus returned to body); 0 WITHOUT a visible ring
- **/map @1440** — 15 stops (focus returned to body); 0 WITHOUT a visible ring
- **/bakery @1440** — 16 stops (focus returned to body); 0 WITHOUT a visible ring
- **/paintings @1440** — 37 stops (focus returned to body); 0 WITHOUT a visible ring
- **/mansion menu @1440** — Enter opens: true · focus into panel: true · Escape closes: true · focus returned to burger: true
- **/paintings dialog @1440** — Enter opens: true · Escape closes: true · focus returned to tile: true
- **/ @390** — 2 stops (focus returned to body); 0 WITHOUT a visible ring
- **/map @390** — 15 stops (focus returned to body); 0 WITHOUT a visible ring
- **/bakery @390** — 12 stops (focus returned to body); 0 WITHOUT a visible ring
- **/paintings @390** — 37 stops (focus returned to body); 0 WITHOUT a visible ring
- **/mansion menu @390** — Enter opens: true · focus into panel: true · Escape closes: true · focus returned to burger: true
- **/paintings dialog @390** — Enter opens: true · Escape closes: true · focus returned to tile: true

## Reduced motion

- **/ @390** — all text visible; 1 console error(s)
- **/bakery @390** — all text visible; 1 console error(s)
- **/commissioners-office @390** — all text visible; 1 console error(s)
- **/mansion @390** — all text visible; 1 console error(s)
- **/ferry @390** — all text visible; 1 console error(s)
- **/barbershop @390** — all text visible; 1 console error(s)
- **/map @390** — 2 text element(s) still hidden; 3 console error(s)
  - div.mapboxgl-touch-pan-blocker "Use two fingers to move the map"
  - div.mapboxgl-scroll-zoom-blocker "Hold Ctrl and scroll to zoom the map"
- **/people @390** — all text visible; 1 console error(s)
- **/paintings @390** — all text visible; 1 console error(s)
- **/about @390** — all text visible; 1 console error(s)
- **/404 @390** — all text visible; 2 console error(s)
- **/ @1440** — all text visible; 1 console error(s)
- **/bakery @1440** — all text visible; 3 console error(s)
- **/commissioners-office @1440** — all text visible; 3 console error(s)
- **/mansion @1440** — all text visible; 3 console error(s)
- **/ferry @1440** — all text visible; 3 console error(s)
- **/barbershop @1440** — all text visible; 3 console error(s)
- **/map @1440** — 2 text element(s) still hidden; 3 console error(s)
  - div.mapboxgl-touch-pan-blocker "Use two fingers to move the map"
  - div.mapboxgl-scroll-zoom-blocker "Hold Ctrl and scroll to zoom the map"
- **/people @1440** — all text visible; 1 console error(s)
- **/paintings @1440** — all text visible; 1 console error(s)
- **/about @1440** — all text visible; 1 console error(s)
- **/404 @1440** — all text visible; 2 console error(s)

## 200% zoom (720×450)

- **/** — no horizontal overflow
- **/bakery** — no horizontal overflow
- **/commissioners-office** — no horizontal overflow
- **/mansion** — no horizontal overflow
- **/ferry** — no horizontal overflow
- **/barbershop** — no horizontal overflow
- **/map** — no horizontal overflow
- **/people** — no horizontal overflow
- **/paintings** — no horizontal overflow
- **/about** — no horizontal overflow
- **/404** — no horizontal overflow

## Console errors

- `/ @390 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/bakery @390 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/commissioners-office @390 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/mansion @390 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/ferry @390 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/barbershop @390 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @390 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @390 rest` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @390 rest` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/people @390 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/paintings @390 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/about @390 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/404 @390 rest` — Failed to load resource: the server responded with a status of 404 (Not Found)
- `/404 @390 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/ @768 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/bakery @768 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/commissioners-office @768 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/mansion @768 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/ferry @768 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/barbershop @768 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @768 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @768 rest` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @768 rest` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/people @768 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/paintings @768 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/about @768 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/404 @768 rest` — Failed to load resource: the server responded with a status of 404 (Not Found)
- `/404 @768 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/ @1440 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/bakery @1440 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/commissioners-office @1440 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/mansion @1440 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/ferry @1440 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/barbershop @1440 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @1440 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @1440 rest` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @1440 rest` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/people @1440 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/paintings @1440 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/about @1440 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/404 @1440 rest` — Failed to load resource: the server responded with a status of 404 (Not Found)
- `/404 @1440 rest` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/mansion @390 menu-open` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @390 menu-open` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @390 menu-open` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @390 menu-open` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/map @390 walk` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @390 walk` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @390 walk` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/map @390 lens-1858` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @390 lens-1858` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @390 lens-1858` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/paintings @390 dialog` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/mansion @390 mini-player` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/mansion @768 menu-open` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @768 menu-open` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @768 menu-open` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @768 menu-open` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/map @768 walk` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @768 walk` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @768 walk` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/map @768 lens-1858` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @768 lens-1858` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @768 lens-1858` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/paintings @768 dialog` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/mansion @768 mini-player` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/mansion @1440 menu-open` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @1440 menu-open` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @1440 menu-open` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @1440 menu-open` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/map @1440 walk` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @1440 walk` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @1440 walk` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/map @1440 lens-1858` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @1440 lens-1858` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @1440 lens-1858` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/paintings @1440 dialog` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/mansion @1440 mini-player` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/ @1440 keyboard` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @1440 keyboard` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @1440 keyboard` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @1440 keyboard` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/bakery @1440 keyboard` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/bakery @1440 keyboard` — A tree hydrated but some attributes of the server rendered HTML didn't match the client properties. This won't be patched up. This can happen if a SSR-ed Client Component used:  - A server/client branch `if (typeof window !== 'undefined')`. - Variable input such as `Date.now()` or `Math.random()` wh
- `/bakery @1440 keyboard` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/bakery @1440 keyboard` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/paintings @1440 keyboard` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/mansion @1440 menu-keyboard` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/paintings @1440 dialog-keyboard` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/paintings @1440 dialog-keyboard` — pageerror: ReferenceError: Cannot access 'stillTexs' before initialization
- `/ @390 keyboard` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @390 keyboard` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @390 keyboard` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @390 keyboard` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/bakery @390 keyboard` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/bakery @390 keyboard` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/bakery @390 keyboard` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/paintings @390 keyboard` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/mansion @390 menu-keyboard` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/paintings @390 dialog-keyboard` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/paintings @390 dialog-keyboard` — pageerror: ReferenceError: Cannot access 'stillTexs' before initialization
- `/ @390 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/bakery @390 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/commissioners-office @390 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/mansion @390 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/ferry @390 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/barbershop @390 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @390 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @390 reduced-motion` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @390 reduced-motion` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/people @390 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/paintings @390 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/about @390 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/404 @390 reduced-motion` — Failed to load resource: the server responded with a status of 404 (Not Found)
- `/404 @390 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/ @1440 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/bakery @1440 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/bakery @1440 reduced-motion` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/bakery @1440 reduced-motion` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/commissioners-office @1440 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/commissioners-office @1440 reduced-motion` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/commissioners-office @1440 reduced-motion` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/mansion @1440 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/mansion @1440 reduced-motion` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/mansion @1440 reduced-motion` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/ferry @1440 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/ferry @1440 reduced-motion` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/ferry @1440 reduced-motion` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/barbershop @1440 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/barbershop @1440 reduced-motion` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/barbershop @1440 reduced-motion` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/map @1440 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map @1440 reduced-motion` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @1440 reduced-motion` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/people @1440 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/paintings @1440 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/about @1440 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/404 @1440 reduced-motion` — Failed to load resource: the server responded with a status of 404 (Not Found)
- `/404 @1440 reduced-motion` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/ zoom-200` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/bakery zoom-200` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/commissioners-office zoom-200` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/mansion zoom-200` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/ferry zoom-200` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/barbershop zoom-200` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map zoom-200` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/map zoom-200` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map zoom-200` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=d9af5643:943:1
- `/people zoom-200` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/paintings zoom-200` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/about zoom-200` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
- `/404 zoom-200` — Failed to load resource: the server responded with a status of 404 (Not Found)
- `/404 zoom-200` — Failed to load resource: the server responded with a status of 504 (Outdated Optimize Dep)
