docs/qa/v10/a11y.md
# Accessibility — http://localhost:4321

**0 serious/critical · 0 moderate · 0 minor across 51 runs** (0 run(s) not reached · 2026-08-21T18:43:55.537Z)

## Violations

No axe violations.

## Keyboard walk

- **/ @1440** — 2 stops (focus returned to body); 0 WITHOUT a visible ring
- **/map @1440** — 15 stops (focus returned to body); 0 WITHOUT a visible ring
- **/bakery @1440** — 16 stops (focus returned to body); 0 WITHOUT a visible ring
- **/paintings @1440** — 37 stops (focus returned to body); 0 WITHOUT a visible ring
- **/mansion menu @1440** — Enter opens: true · focus into panel: true · Escape closes: true · focus returned to burger: true
- **/paintings dialog @1440** — Enter opens: true · Escape closes: true · focus returned to tile: true
- **/ @390** — 2 stops (focus returned to body); 0 WITHOUT a visible ring
- **/map @390** — 15 stops (focus returned to body); 0 WITHOUT a visible ring
- **/bakery @390** — 12 stops (focus returned to body); 0 WITHOUT a visible ring
- **/paintings @390** — 37 stops (focus returned to body); 0 WITHOUT a visible ring
- **/mansion menu @390** — Enter opens: true · focus into panel: true · Escape closes: true · focus returned to burger: true
- **/paintings dialog @390** — Enter opens: true · Escape closes: true · focus returned to tile: true

## Reduced motion

- **/ @390** — all text visible; 0 console error(s)
- **/bakery @390** — all text visible; 0 console error(s)
- **/commissioners-office @390** — all text visible; 0 console error(s)
- **/mansion @390** — all text visible; 0 console error(s)
- **/ferry @390** — all text visible; 0 console error(s)
- **/barbershop @390** — all text visible; 0 console error(s)
- **/map @390** — 2 text element(s) still hidden; 2 console error(s)
  - div.mapboxgl-touch-pan-blocker "Use two fingers to move the map"
  - div.mapboxgl-scroll-zoom-blocker "Hold Ctrl and scroll to zoom the map"
- **/people @390** — all text visible; 0 console error(s)
- **/paintings @390** — all text visible; 0 console error(s)
- **/about @390** — all text visible; 0 console error(s)
- **/404 @390** — all text visible; 1 console error(s)
- **/ @1440** — all text visible; 0 console error(s)
- **/bakery @1440** — all text visible; 2 console error(s)
- **/commissioners-office @1440** — all text visible; 2 console error(s)
- **/mansion @1440** — all text visible; 2 console error(s)
- **/ferry @1440** — all text visible; 2 console error(s)
- **/barbershop @1440** — all text visible; 2 console error(s)
- **/map @1440** — 2 text element(s) still hidden; 2 console error(s)
  - div.mapboxgl-touch-pan-blocker "Use two fingers to move the map"
  - div.mapboxgl-scroll-zoom-blocker "Hold Ctrl and scroll to zoom the map"
- **/people @1440** — all text visible; 0 console error(s)
- **/paintings @1440** — all text visible; 0 console error(s)
- **/about @1440** — all text visible; 0 console error(s)
- **/404 @1440** — all text visible; 1 console error(s)

## 200% zoom (720×450)

- **/** — no horizontal overflow
- **/bakery** — no horizontal overflow
- **/commissioners-office** — no horizontal overflow
- **/mansion** — no horizontal overflow
- **/ferry** — no horizontal overflow
- **/barbershop** — no horizontal overflow
- **/map** — no horizontal overflow
- **/people** — no horizontal overflow
- **/paintings** — no horizontal overflow
- **/about** — no horizontal overflow
- **/404** — no horizontal overflow

## Console errors

- `/map @390 rest` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @390 rest` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/404 @390 rest` — Failed to load resource: the server responded with a status of 404 (Not Found)
- `/map @768 rest` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @768 rest` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/about @768 rest` — %cAstro background: linear-gradient(66.77deg, #D83333 0%, #F041FF 100%); color: white; padding-inline: 4px; border-radius: 2px; font-family: monospace; Error while running audit's match function: TypeError: Failed to fetch
- `/404 @768 rest` — Failed to load resource: the server responded with a status of 404 (Not Found)
- `/map @1440 rest` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @1440 rest` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/404 @1440 rest` — Failed to load resource: the server responded with a status of 404 (Not Found)
- `/map @390 menu-open` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @390 menu-open` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/map @390 walk` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @390 walk` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/map @390 lens-1858` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @390 lens-1858` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/map @768 menu-open` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @768 menu-open` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/map @768 walk` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @768 walk` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/map @768 lens-1858` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @768 lens-1858` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/map @1440 menu-open` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @1440 menu-open` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/map @1440 walk` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @1440 walk` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/map @1440 lens-1858` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @1440 lens-1858` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/map @1440 keyboard` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @1440 keyboard` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/bakery @1440 keyboard` — A tree hydrated but some attributes of the server rendered HTML didn't match the client properties. This won't be patched up. This can happen if a SSR-ed Client Component used:  - A server/client branch `if (typeof window !== 'undefined')`. - Variable input such as `Date.now()` or `Math.random()` wh
- `/bakery @1440 keyboard` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/bakery @1440 keyboard` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/map @390 keyboard` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @390 keyboard` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/bakery @390 keyboard` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/bakery @390 keyboard` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/map @390 reduced-motion` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @390 reduced-motion` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/404 @390 reduced-motion` — Failed to load resource: the server responded with a status of 404 (Not Found)
- `/bakery @1440 reduced-motion` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/bakery @1440 reduced-motion` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/commissioners-office @1440 reduced-motion` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/commissioners-office @1440 reduced-motion` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/mansion @1440 reduced-motion` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/mansion @1440 reduced-motion` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/ferry @1440 reduced-motion` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/ferry @1440 reduced-motion` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/barbershop @1440 reduced-motion` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/barbershop @1440 reduced-motion` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/map @1440 reduced-motion` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map @1440 reduced-motion` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/404 @1440 reduced-motion` — Failed to load resource: the server responded with a status of 404 (Not Found)
- `/map zoom-200` — Failed to load resource: net::ERR_TUNNEL_CONNECTION_FAILED
- `/map zoom-200` — Error: Failed to fetch https://api.mapbox.com/styles/v1/wbmdesign/cm9afam6s001b01spbrk5g0l6/draft?sdk=js-3.27.0&access_token=pk.eyJ1Ijoid2JtZGVzaWduIiwiYSI6ImNtOWFjZm9tdzAzdGYycW92dmdhY290eTQifQ.0AfqOazVG3kKKepyDrTSuw     at http://localhost:4321/node_modules/.vite/deps/mapbox-gl.js?v=c6bd5d25:943:1
- `/404 zoom-200` — Failed to load resource: the server responded with a status of 404 (Not Found)
